<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sheepc.sqlitetest.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tip"
            android:textSize="14sp" />

        <ToggleButton
            android:id="@+id/captureButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ToggleButton"
            android:textOff="@string/capBtnOff"
            android:textOn="@string/capBtnOn" />

        <Button
            android:id="@+id/delBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/delBtnText"
            android:textSize="12sp" />

        <Button
            android:id="@+id/testBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textSize="12sp"
            tools:text="@string/testBtn" />

        <ListView
            android:id="@+id/results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>
